tests/spec/core_functions/color/hwb/error/three_args.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/hwb/error/three_args.hrx"

mod blackness {

    // Ignoring "test_type", error tests are not supported yet.
}
mod hue {

    // Ignoring "test_type", error tests are not supported yet.
}
mod whiteness {

    // Ignoring "test_type", error tests are not supported yet.
}
